--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -12,5 +12,5 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v6
         with: 
-          build: npm run build
-          start: npm start
+          build: npm install
+          test: npx cypress open
